--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <p>hola</p>
     <p>whats up que pasa</p>
-    <img src="vampieyes-01.png"/>
+    <img src="vampieyes-01.png">
 </body>
 </html>
