--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <p>hola</p>
     <p>whats up que pasa</p>
     <img src="vampieyes-01.png">
+    <video>
+    <source src="acrojugg.mp4" type="video/mp4">
+        </video>
 </body>
 </html>
