--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>hola</p>
     <p>whats up que pasa</p>
     <img src="vampieyes-01.png">
-    <video>
+    <video controls>
     <source src="acrojugg.mp4" type="video/mp4">
         </video>
 </body>
